test/studies/hpcc/FFT/bradc/fft-zip.good
i is: 1 j is: 2
i is: 2 j is: 3
i is: 3 j is: 4
i is: 4 j is: 5
i is: 5 j is: 6
i is: 6 j is: 7
i is: 7 j is: 8
i is: 8 j is: 9
fft-zip.chpl:1: error: zippered iterations have non-equal lengths
