test/studies/hpcc/FFT/bradc/fft-zip.chpl
for (i,j) in zip(1..8, 2..10) {
  writeln("i is: ", i, " j is: ", j);
}

